--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             Senior FrontEnd Developer
           </h3>
           <p class="about-me__decription">
-            My name is Abdulaziz. I'm 21 years old . I live in South Korea , Busan . I have experience in programming for about 5 month
+            My name is Abdulaziz. I'm 21 years old . I live in South Korea , Busan . 
           </p>
           <button type="button" class="button to-uppercase about-me__action">
             Download CV
@@ -179,7 +179,7 @@
             </div>
             <div class="client-item__info">
               <h3 class="client-item__name">
-                Ottiki Moldikiev
+                Nurillo Davlatjonov
               </h3>
               <p class="client-item__position">
                 Senior Developer
