--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           </h5>
           <h3 class="blur-line"></h3>
           <h3 class="section-title">
-            Senior FrontEnd Developer
+            FrontEnd Developer
           </h3>
           <p class="about-me__decription">
             My name is Abdulaziz. I'm 21 years old . I live in South Korea , Busan . 
